робота із таблеткою

--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -17,13 +17,21 @@
                 </a>
 
 
-                <div class="burger-case">
-                    <button type="button" class="burger-btn" data-menu-button>
-                        <svg class="burger-icon" width="20" height="20">
-                            <use href="./images/sprite.svg#burgermenu"></use>
-                        </svg>
-                    </button>
+                <div class="btn-case">
+                    
+                    <div class="burger-case">
+                        <button type="button" class="burger-btn" data-menu-button>
+                            <svg class="burger-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#burgermenu"></use>
+                            </svg>
+                        </button>                    
+                    </div>
+
+                
+                    <button class="Buy-now-button" type="button">Buy now</button>
                 </div>
+
+               
             </div>
 
 
@@ -37,7 +45,7 @@
                 </ul>
             </nav>
 
-            <button class="Buy-now-button" type="button">Buy now</button>
+            
 
         </section>
 
