--- a/src/sass/layout/_hero_header.scss
+++ b/src/sass/layout/_hero_header.scss
@@ -13,21 +13,44 @@
 
   .hero-section {
     padding: 6px 20px;
+
+    @media screen and (min-width: 768px) {
+     padding: 34px 52px; 
+    }
+    @media screen and (min-width: 1280px) {
+      padding: 46px 50px; 
+    }
   }
 
   .hero-center{
-  position: relative;
-  overflow: hidden;
-  height: 446px;
+    position: relative;
+    overflow: hidden;
+    height: 446px;
+
+     @media screen and (min-width: 768px) {
+       position:static;
+    }
+    @media screen and (min-width: 1280px) {
+    }
+
   }
 
   .hero-case{
-    padding-left: 142px;
+    // padding-left: 142px;
+
     position: absolute;
     top: 37px;
-    // right: 25px;
-    // overflow: hidden;
+    left: 36px;
     min-width: 320px;
+
+    @media screen and (min-width: 768px) {
+      // padding-left: 378px;
+      top: 63px;
+      left: 307px;
+    }
+    @media screen and (min-width: 1280px) {
+      // padding-left: 594px;
+    }
   }
 
   .logo-case {
@@ -41,13 +64,59 @@
   .notitia-block,
   .soooooo-tasty {
     display: none;
+    
+  }
+
+  .btn-case{
+    display: flex;
+    align-items: center;    
+    margin-left: auto;
+  }
+
+  .Buy-now-button{
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 21px;
+
+
+
+    @media screen and (min-width: 768px) {
+    display: flex ;
+    align-items: center;
+    margin-left: 30px;
+       
+    
+
+    
+    background-color: var(--text-color-dark-bg);
+
+    color: var(--main-dark-color);
+    background: var(--text-color-dark-bg);
+    border-radius: 20px;
+    padding: 6px 60px;
+    
+    transition: var(--transition-duration) var(--timing-function);
+    &:hover, 
+    &:focus {
+    background: var(--hover-light-bg-btn);
+    
+  }
+
+
+    }
+    @media screen and (min-width: 1280px) {
+    // display: flex;
+  }
   }
 
   .slogan-title{
   position: absolute;
   z-index: 3;
   left: 20px;
-  top: 193px;
+  top: 193px;   
   }
 
   .hero-title{
@@ -100,8 +169,8 @@
     }
     
     &:first-child{
-    background: var(--main-dark-color);
-    margin-right: 8px;
+      background: var(--main-dark-color);
+      margin-right: 8px;
 
       &:hover, 
       &:focus {
@@ -177,7 +246,6 @@
 
   .burger-case {
     display: flex;
-    margin-left: auto;
     align-items: center;
   }
 
@@ -197,15 +265,61 @@
   }
 
   .hero-boarder {
+    position: absolute;
+
     margin-left: 50px;
     width: 346px;
     height: 346px;
     border-radius: 50%;  
     background:var(--label-color);
     margin-top: 27px;
+
+    @media screen and (min-width: 768px) {
+    margin-left: 327px;
+    margin-top: 27px;
+    }
+    @media screen and (min-width: 1280px) {
+    margin-left: 495px;
+    }
   }
 
-  // modal
+
+  .header {
+  @media screen and (min-width: 768px) {
+    // display: flex;
+  }
+  @media screen and (min-width: 1280px) {
+    // display: flex;
+  }
+}
+
+.header {
+  min-width: 230px;
+  @media screen and (min-width: 768px) {
+    min-width: 180px;
+  }
+  @media screen and (min-width: 1280px) {
+    min-width: 330px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  ///////////////////////////// modal/////////////////////////////////
   .backdrop {  
 
     z-index: 7;
@@ -306,6 +420,8 @@
     background: var(--hover-light-bg-btn);
     }
   }
+
+
 
   .modal-list{
   margin-top: 32px;
