--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -25,7 +25,7 @@
     Aliquam erat volutpat. Aenean accumsan.</span>
     <button class="about-button">Read more
         <svg class="about-button-icon" height="8" width="5">
-            <use href="./images/about/about-sprite.svg#icon-Vector-1"></use>
+            <use href="./images/icon/sprite.svg#icon-Vector-1"></use>
         </svg>
     </button>
 </section>
