--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,21 +12,21 @@
         <li class="footer-item">
             <a class="footer-link" target="blank" href="https://github.com/">
                 <svg class="footer-icon git">
-                    <use href="./images/sprite-footer-1.svg#icon-git" width="19" height="19"></use>
+                    <use href="./images/icon/sprite.svg#icon-git" width="19" height="19"></use>
                 </svg>
             </a>
          </li>
          <li class="footer-item">
             <a class="footer-link" target="blank" href="https://web.telegram.org/#/login">
                 <svg class="footer-icon telegram">
-                    <use  href="./images/sprite-footer-1.svg#icon-telegram" width="19" height="15"></use>
+                    <use  href="./images/icon/sprite.svg#icon-telegram" width="19" height="15"></use>
                 </svg>
             </a>
          </li>
          <li class="footer-item">
             <a class="footer-link" target="blank" href="https://www.facebook.com/vhod.ru">
                 <svg class="footer-icon facebook">
-                    <use  href="./images/sprite-footer-1.svg#icon-facebook" width="9" height="19"></use>
+                    <use  href="./images/icon/sprite.svg#icon-facebook" width="9" height="19"></use>
                 </svg>
             </a>
          </li>
