--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,7 +12,7 @@
                     </p>
                     <button class="products-button" type="button">
                         <svg class="arrow-icon">
-                            <use href="./images/product/sprite.svg#icon-arrow-right2"></use>
+                            <use href="./images/icon/sprite.svg#icon-arrow-right2"></use>
                         </svg>
                     </button>
                 </div> 
@@ -25,7 +25,7 @@
                     </p>
                     <button class="products-button" type="button">
                         <svg class="arrow-icon">
-                            <use href="./images/product/sprite.svg#icon-arrow-right2"></use>
+                            <use href="./images/icon/sprite.svg#icon-arrow-right2"></use>
                         </svg>
                     </button>
                 </div>
@@ -38,7 +38,7 @@
                     </p>
                     <button class="products-button" type="button">
                         <svg class="arrow-icon">
-                            <use href="./images/product/sprite.svg#icon-arrow-right2"></use>
+                            <use href="./images/icon/sprite.svg#icon-arrow-right2"></use>
                         </svg>
                     </div>
             </button>
