--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,11 +3,15 @@
 .hero-section {
   width: 100%;
   min-width: 200px;
-  padding-top: 193px;
-  padding-bottom: 160px;
   position: relative;
   margin: 0 auto;
   background-color: #ffb8ca;
+}
+
+.hero-container {
+  margin: 0 auto;
+  padding-top: 193px;
+  padding-bottom: 160px;
   background-image: url('../images/hero-images/m-hero-icecone.png'),
     url('../images/hero-images/m-hero-circle.png');
   background-repeat: no-repeat;
@@ -18,7 +22,7 @@
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
   screen and (min-resolution: 192dpi) and (min-width: 320px),
   screen and (min-resolution: 2dppx) and (min-width: 320px) {
-  .hero-section {
+  .hero-container {
     background-image: url('../images/hero-images/m-hero-icecone@2x.png'),
       url('../images/hero-images/m-hero-circle@2x.png');
     background-position: bottom 0 right 32px, bottom 75px right 0;
@@ -27,7 +31,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .hero-section {
+  .hero-container {
     background-image: url('../images/hero-images/t-hero-icecone.png'),
       url('../images/hero-images/t-hero-circle.png');
     background-position: bottom 0 right 247px, bottom 46px right 137px;
@@ -38,7 +42,7 @@
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
   screen and (min-resolution: 192dpi) and (min-width: 768px),
   screen and (min-resolution: 2dppx) and (min-width: 768px) {
-  .hero-section {
+  .hero-container {
     background-image: url('../images/hero-images/t-hero-icecone@2x.png'),
       url('../images/hero-images/t-hero-circle@2x.png');
     background-position: bottom 0 right 247px, bottom 46px right 137px;
@@ -47,7 +51,7 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .hero-section {
+  .hero-container {
     background-image: url('../images/hero-images/d-hero-icecone.png'),
       url('../images/hero-images/d-hero-circle.png');
     background-position: bottom 0 right 450px, bottom 75px right 267px;
@@ -58,18 +62,12 @@
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
   screen and (min-resolution: 192dpi) and (min-width: 1200px),
   screen and (min-resolution: 2dppx) and (min-width: 1200px) {
-  .hero-section {
+  .hero-container {
     background-image: url('../images/hero-images/d-hero-icecone@2x.png'),
       url('../images/hero-images/d-hero-circle@2x.png');
     background-position: bottom 0 right 450px, bottom 75px right 267px;
     background-size: 236px 557px, 538px 538px;
   }
-}
-
-.hero-container {
-  margin: 0 auto;
-  width: 100%;
-  min-width: 244px;
 }
 
 .hero-title {
@@ -156,13 +154,10 @@
 // Tablet styles //
 
 @media screen and (min-width: 768px) {
-  .hero-section {
-    padding-top: 94px;
-    padding-bottom: 34px;
-  }
-
   .hero-container {
-    min-width: 700px;
+    position: relative;
+    padding-top: 94px;
+    padding-bottom: 34px;    
   }
 
   .hero-title-position {
@@ -297,14 +292,10 @@
 // Desktop styles //
 
 @media screen and (min-width: 1200px) {
-  .hero-section {
-    padding-top: 156px;
-    padding-bottom: 56px;
-  }
 
   .hero-container {
-    width: 100%;
-    min-width: 1200px;
+    padding-top: 156px;
+    padding-bottom: 56px;
   }
 
   .hero-title {
