--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,6 +1,50 @@
+.footer.container{
+    width: 100%;
+    background-color: #FFF5F6; 
+}
 
-
-
+.footer-text{
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height:1.167;
+    text-transform: uppercase;
+    color: #FFA5BA;
+    text-align: start;
+    max-width: 232px;
+    display: flex;
+    margin-bottom: 17px;
+    }
+    .footer-double-title{
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 34px;
+    line-height:1.147;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #D41443;
+    display: flex;
+    max-width: 200px;
+    margin-bottom: 43px;
+    }
+    .footer-list{
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 46px;
+        margin-right: -28px;
+    
+    }
+    .footer-item{
+        display: flex;
+        text-decoration: none;
+        
+        
+    }
+    .footer .link{
+       text-decoration: none;
+    }
 footer .link{
    text-decoration: none;
 }
@@ -81,6 +125,7 @@ font-size: 14px;
 line-height: 1.500;
 text-align: center;
 color: #907E82;
+margin-bottom: 25px;
 }
 @media screen and(min-width:480px){
 .footer .container{
@@ -89,15 +134,16 @@ max-width: 480px;
 }
 @media screen and(min-width:768px){
 
- .footer{
+  .footer{
      display: flex;
      flex-wrap: wrap;
      justify-content: space-around;
      padding-bottom: 18px;
- }
+    }
+  
  .footer-descr{
      margin-bottom: 91px;
- }
+  }
 
  .footer-text{
     font-family: Titan One;
@@ -108,7 +154,7 @@ max-width: 480px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     max-width: 340px;
-    margin-right: 92px;
+   
  }
  .footer-double-title{
     font-family: Titan One;
@@ -120,9 +166,7 @@ max-width: 480px;
     text-transform: uppercase;
     max-width: 340px;
  }
- .footer-company-text{
-   width: 276px;
- }
+
  .footer-tel-text,
  .footer-tel{
     font-family: DM Sans;
@@ -132,11 +176,18 @@ max-width: 480px;
     line-height: 1.857;
     text-align: right;   
  }
+ .footer-company-text{
+     width: 100%;
+     margin-bottom: 0px;
+
+ }
 }
 @media screen and(min-width:1280px){
  .footer{
      padding-bottom: 10px;
+     
  }
+ 
 .footer-text{
 font-family: Titan One;
 font-style: normal;
@@ -173,5 +224,9 @@ left: 7px;
  .footer-tel{
 font-size: 16px;
 line-height: 1.875;    
+ }
+ .footer-company-text{
+     width:100%;
+     margin-bottom: 0px;
  }
 }
