--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <section class="contacts">
   <!-- <h2 class="visually-hidden">Адресa Компании</h2> -->
-  <div class="container">
+  <div class="container_cont">
     <div class="wrapper-city">
       <div class="contacts-city">
         <ul class="contacts-list list">
