--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,14 +8,14 @@
                 <div class="products-item-content">
                     <h3 class="products-list-title">ice cream</h3>
                     <svg class="icon-dots">
-                        <use href="./images/product/sprite.svg#icon-dots"></use>
+                        <use href="./images/icon/sprite.svg#icon-dots"></use>
                     </svg>
                     <p class="products-list-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                     </p>
                     <button class="products-button" type="button">
                         <svg class="arrow-icon">
-                            <use href="./images/product/sprite.svg#icon-arrow-right2"></use>
+                            <use href="./images/icon/sprite.svg#icon-arrow-right2"></use>
                         </svg>
                     </button>
                 </div> 
@@ -24,14 +24,14 @@
                 <div class="product-item-content">
                     <h3 class="products-list-title">ice coffee</h3>
                     <svg class="icon-dots">
-                        <use href="./images/product/sprite.svg#icon-dots"></use>
+                        <use href="./images/icon/sprite.svg#icon-dots"></use>
                     </svg>
                     <p class="products-list-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                     </p>
                     <button class="products-button" type="button">
                         <svg class="arrow-icon">
-                            <use href="./images/product/sprite.svg#icon-arrow-right2"></use>
+                            <use href="./images/icon/sprite.svg#icon-arrow-right2"></use>
                         </svg>
                     </button>
                 </div>
@@ -40,14 +40,14 @@
                 <div class="product-item-content">
                     <h3 class="products-list-title">milkshakes</h3>
                     <svg class="icon-dots">
-                        <use href="./images/product/sprite.svg#icon-dots"></use>
+                        <use href="./images/icon/sprite.svg#icon-dots"></use>
                     </svg>
                     <p class="products-list-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                     </p>
                     <button class="products-button" type="button">
                         <svg class="arrow-icon">
-                            <use href="./images/product/sprite.svg#icon-arrow-right2"></use>
+                            <use href="./images/icon/sprite.svg#icon-arrow-right2"></use>
                         </svg>
                     </div>
             </button>
