Tablet styles added

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -64,3 +64,32 @@
   line-height: 1.7;
   color: var(--dark--text-color);
 }
+
+// Tablet styles
+@media screen and (min-width: $tablet) {
+  .advantages__list {
+    display: flex;
+
+    .advantages__item {
+      width: 180px;
+      margin-bottom: 0;
+
+      &:not(:last-child) {
+        margin-right: 60px;
+      }
+
+      &::before {
+        margin-bottom: 36px;
+      }
+    }
+  }
+
+  .advantages__text {
+    margin-bottom: 13px;
+    font-size: 48px;
+  }
+
+  .advantages__description {
+    font-size: 14px;
+  }
+}
