--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   position: absolute;
-  max-width: 1280px;
+  // max-width: 1280px;
   width: 100%;
 
   background-color: var(--bg-color-light);
@@ -54,8 +54,8 @@
   font-family: var(--title-font);
   font-style: normal;
   font-weight: normal;
-  font-size: 34px;
-  line-height: 39px;
+  font-size: 35px;
+  line-height: 40px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
@@ -68,16 +68,16 @@
     font-size: 48px;
     line-height: 55px;
     letter-spacing: 0.06em;
-
-    margin-bottom: 91px;
+    margin-bottom: 90px;
   }
+
   @media screen and (min-width: 1280px) {
     max-width: 478px;
     font-size: 58px;
     line-height: 66px;
     letter-spacing: 0.06em;
 
-    margin-bottom: 97px;
+    margin-bottom: 95px;
   }
 }
 
@@ -103,6 +103,7 @@
   @media screen and (min-width: 768px) {
     font-size: 14px;
   }
+
   @media screen and (min-width: 1280px) {
     font-size: 16px;
   }
@@ -150,6 +151,7 @@
     margin-top: 29px;
     margin-bottom: 18px;
   }
+
   @media screen and(min-width: 1280px) {
     margin-top: 9px;
     margin-bottom: 10px;
