--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -15,7 +15,7 @@
   --text-color-dark: #000000;
   --text-color-light: #907e82;
 
-  --hover-light-bg-btn: #351e1e;
+  --hover-light-bg-btn: #ecebeb;
   --hover-dark-bg-btn: #c7133e;
   --color-social-link: #fea5bb;
   --label-color: #ffa5ba;
