--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -9,7 +9,7 @@
   margin-top: 170px;
 }
 .contacts-list {
-  margin-top: -84px;
+  //margin-top: -84px;
   @media screen and(min-width:768px) {
     display: flex;
     margin: -10px;
@@ -21,12 +21,13 @@
   }
 }
 .contacts-itme {
-  // margin-top: -84px;
   background: #ffffff;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   padding: 43px 20px;
-
+  &:first-child{
+   margin-top: -84px;
+ }
   @media screen and(min-width:768px) {
     width: calc((100% - 3 * 16px) / 3);
     margin: 10px;
@@ -40,7 +41,7 @@
     padding-right: 45px;
     width: calc((100% - 3 * 30px) / 3);
     margin: 15px;
-    margin-top: -102px;
+   margin-top: -102px;
   }
   //outline: 1px solid red;
   &:not(:last-child) {
