разметка под Desktop

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="contacts">
-  <!-- <h2 class="visually-hidden">Адресa Компании</h2> -->
+  <h2 class="visually-hidden">Адресa Компании</h2>
   <div class="container">
     <div class="wrapper-city">
       <div class="contacts-city">
@@ -13,7 +13,7 @@
           </li>
           <li class="contacts-list-item">
             <p class="contacts-list-item-week">Monday - Friday</p>
-            <p class="contacts-list-item-time">06:00 AM - 10:00 PM</p>
+            <p class="contacts-list-item-time item-time">06:00 AM - 10:00 PM</p>
 
             <p class="contacts-list-item-week">Saturday - Sunday</p>
             <p class="contacts-list-item-time">08:00 AM - 16:00 PM</p>
@@ -49,7 +49,7 @@
           </li>
           <li class="contacts-list-item">
             <p class="contacts-list-item-week">Monday - Friday</p>
-            <p class="contacts-list-item-time">06:00 AM - 10:00 PM</p>
+            <p class="contacts-list-item-time item-time">06:00 AM - 10:00 PM</p>
 
             <p class="contacts-list-item-week">Saturday - Sunday</p>
             <p class="contacts-list-item-time">08:00 AM - 16:00 PM</p>
@@ -85,7 +85,7 @@
           </li>
           <li class="contacts-list-item">
             <p class="contacts-list-item-week">Monday - Friday</p>
-            <p class="contacts-list-item-time">06:00 AM - 10:00 PM</p>
+            <p class="contacts-list-item-time item-time">06:00 AM - 10:00 PM</p>
 
             <p class="contacts-list-item-week">Saturday - Sunday</p>
             <p class="contacts-list-item-time">08:00 AM - 16:00 PM</p>
@@ -112,8 +112,15 @@
     </div>
 
     <div class="locations">
-      <button type="button" class="contacts-btn">Our Locations</button>
-      <button type="button" class="contacts-btn franchise">Franchise</button>
+      <!-- <form action="https://goodlood.com/" target="_blank">
+      </form> -->
+      <button class="contacts-btn">Our Locations</button>
+      <!-- <form
+        action=""
+        target="_blank"
+      > -->
+    </form>
+    <button class="contacts-btn franchise">Franchise</button>
     </div>
   </div>
 </section>
