--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,26 +2,26 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-//Utils
-@import './utils/variables';
-@import './utils/visually_hidden';
+// Utils
+ @import './utils/variables';
+ @import './utils/visually_hidden';
 
-//Base
-@import './base/common';
-@import './base/container';
+//  Base
+ @import './base/common';
+ @import './base/container';
 
 // Стили для файла с примером HTML-фрагмента
 
 
-@import './components/header';
-@import './components/mobile-menu';
-@import './components/hero';
-@import './components/products';
+//  @import './components/header';
+//  @import './components/mobile-menu';
+//  @import './components/hero';
+//  @import './components/products';
 
 
-@import './components/about';
-@import './components/advantages';
-@import "./components/footer";
+//  @import './components/about';
+//  @import './components/advantages';
+//  @import "./components/footer";
 
 // моя ветка
 
