--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,6 +1,8 @@
 
+.hero .container{background-color: var(--colorful-bg-color-one);
+    position: relative;
+  }
 
-.hero{margin-bottom:121px}
 
 .hero-title {
   font-family: Titan One;
@@ -55,12 +57,13 @@ h1 {
 
 
 
-.ice-cream-picture-wrapper{margin-left: 117px;
-    margin-top: 27px;
-    }
+
     .ice-cream-picture{background-image: url(../images/hero/hero-circle-big-mobile.png);
-    display: block;
+    display:flex;
 background-repeat: no-repeat;
+background-position: top right;
+
+justify-content: flex-end;
 
 
     }
@@ -82,23 +85,36 @@ background-repeat: no-repeat;
 @media screen and (min-width:768px){
 
      .ice-cream-picture{background-image: url(../images/hero/hero-circle-big-tablet.png);
-    display: block;
+min-width: 324px;
+height: auto;
+display: inline-flex;
 background-repeat: no-repeat;
+
+justify-content:center;
+
+
 }
+.hero .container{background-color: var(--colorful-bg-color-one);
+    position: static;
+  }
 
 
      .hero-paragraph{
-         max-width: 114px;
-         max-height: 48px;
+max-width: 122px;
+max-height: 48px;
 font-weight: 400;
 font-size: 8px;
 line-height: 1.5;
 color: var(--primary-light-color);
 }
 
-.milk-decanter-wrapper{display: flex;
+.milk-decanter-wrapper{display: inline-flex;
 align-items: center;
+margin-top:19px;
 }
+.hero-left-side{display: inline-flex;
+flex-direction: column;
+transform: translateY(-100%);}
    
 
 .hero-title{
@@ -117,8 +133,19 @@ font-size: 34px;
 line-height: 90.5%;
 }
 
-.girl-so-tasty{margin-left: 566px;
-display: block;}
+.girl-so-tasty{
+display:inline-block;
+position: absolute;
+right: 34px;
+
+
+}
+
+
+.wrapper-container{position: static;
+  transform: translatey(0);
+  display: inline-block;
+}
 
 
 }
