--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,65 +1,65 @@
 <section class="hero">
   <div class="container">
-    <div class="wrapper-container">
-      <h1 class="hero-title">
-        ice cream made with
-        <span class="hero-title-theme-accent"> passion</span>
-      </h1>
-      <button type="button " class="info-button">Products</button>
-      <button type="button" class="info-button">How it’s made?</button>
-    </div>
-    <div class="milk-decanter-wrapper">
-      <picture class="milk-decanter">
-        <source
-          srcset="
-            ./images/hero/hero-milk-bio-eco-desktop.png    1x,
-            ./images/hero/hero-milk-bio-eco-desktop@2x.png 2x
-          "
-          media="(min-width:1200px)" />
-        <source
-          srcset="
-            ./images/hero/hero-milk-bio-eco-tablet.png    1x,
-            ./images/hero/hero-milk-bio-eco-tablet@2x.png 2x
-          "
-          media="(min-width:768px)" />
-        <img
-          src=" ./images/hero/hero-milk-bio-eco-desktop.png"
-          alt="milk-decanter"
-      /></picture>
+    <div class="hero-left-side">
+      <div class="wrapper-container">
+        <h1 class="hero-title">
+          ice cream made with
+          <span class="hero-title-theme-accent"> passion</span>
+        </h1>
+        <button type="button " class="info-button">Products</button>
+        <button type="button" class="info-button">How it’s made?</button>
+      </div>
+      <div class="milk-decanter-wrapper">
+        <picture class="milk-decanter">
+          <source
+            srcset="
+              ./images/hero/hero-milk-bio-eco-desktop.png    1x,
+              ./images/hero/hero-milk-bio-eco-desktop@2x.png 2x
+            "
+            media="(min-width:1200px)" />
+          <source
+            srcset="
+              ./images/hero/hero-milk-bio-eco-tablet.png    1x,
+              ./images/hero/hero-milk-bio-eco-tablet@2x.png 2x
+            "
+            media="(min-width:768px)" />
+          <img
+            src=" ./images/hero/hero-milk-bio-eco-desktop.png"
+            alt="milk-decanter"
+        /></picture>
 
-      <p class="hero-paragraph">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et
-      </p>
+        <p class="hero-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+      </div>
     </div>
 
-    <div class="ice-cream-picture-wrapper">
-      <picture class="ice-cream-picture">
-        <source
-          srcset="
-            ./images/hero/hero-ice-cream-desktop.png    1x,
-            ./images/hero/hero-ice-cream-desktop@2x.png 2x
-          "
-          media="(min-width:1200px)"
-        />
-        <source
-          srcset="
-            ./images/hero/hero-ice-cream-tablet.png    1x,
-            ./images/hero/hero-ice-cream-tablet@2x.png 2x
-          "
-          media="(min-width:768px)"
-        />
-        <source
-          srcset="
-            ./images/hero/hero-ice-cream-mobile.png    1x,
-            ./images/hero/hero-ice-cream-mobile@2x.png 2x
-          "
-          media="(min-width:480px)"
-        />
+    <picture class="ice-cream-picture">
+      <source
+        srcset="
+          ./images/hero/hero-ice-cream-desktop.png    1x,
+          ./images/hero/hero-ice-cream-desktop@2x.png 2x
+        "
+        media="(min-width:1200px)"
+      />
+      <source
+        srcset="
+          ./images/hero/hero-ice-cream-tablet.png    1x,
+          ./images/hero/hero-ice-cream-tablet@2x.png 2x
+        "
+        media="(min-width:768px)"
+      />
+      <source
+        srcset="
+          ./images/hero/hero-ice-cream-mobile.png    1x,
+          ./images/hero/hero-ice-cream-mobile@2x.png 2x
+        "
+        media="(min-width:480px)"
+      />
 
-        <img src="./images/hero/hero-ice-cream-mobile.png " alt="ice cream" />
-      </picture>
-    </div>
+      <img src="./images/hero/hero-ice-cream-mobile.png " alt="ice cream" />
+    </picture>
 
     <picture class="girl-so-tasty">
       <source
