добавил адаптив галереи

--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -22,27 +22,53 @@
   }
 
   & .list-item-1 {
-    padding-top: 102px;
+    padding-top: 11%;
   }
   & .list-item-2 {
-    padding-top: 62px;
+    padding-top: 6%;
   }
   //   & .list-item-3 {
   //     padding-top: 82px;
   //   }
   & .list-item-4 {
-    padding-top: 72px;
+    padding-top: 7%;
   }
   & .list-item-5 {
-    padding-top: 32px;
+    padding-top: 4%;
   }
   & .list-item-6 {
-    padding-top: 92px;
+    padding-top: 9%;
   }
 }
 
 .masonr-photo {
-  margin: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+    width: 38px;
+    height: 38px;
+
+    @media screen and (min-width:768px) {
+    width: 86px;
+    height: 86px;
+  }
+    @media screen and (min-width: 1280px) {
+    width: 136px;
+    height: 136px;
+  }
+}
+
+.photo-big {
+  width: 80px;
+  height: 80px;
+
+      @media screen and (min-width:768px) {
+    width: 173px;
+    height: 173px;
+  }
+    @media screen and (min-width: 1280px) {
+    width: 285px;
+    height: 285px;
+  }
 }
 
 .masonr-photo:focus,
