--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -8,7 +8,7 @@
                     <picture>
                         <source type="image/webp"
                             srcset="./images/5-gallery/gal1@1.webp 1x,./images/5-gallery/gal1@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 1"  width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 1"  
                             srcset="./images/5-gallery/gal1@1.png 1x,./images/5-gallery/gal1@1.png 2x"
                             src="./images/5-gallery/gal1@1.png">
                     </picture>
@@ -20,12 +20,12 @@
                 <li class="inside-item">
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal2@1.webp 1x,./images/5-gallery/gal2@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 2" width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 2" 
                             srcset="./images/5-gallery/gal2@1.png 1x,./images/5-gallery/gal2@1.png 2x" src="./images/5-gallery/gal2@1.png">
                     </picture>
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal3@1.webp 1x,./images/5-gallery/gal3@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 3" width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 3" 
                         srcset="./images/5-gallery/gal3@1.png 1x,./images/5-gallery/gal3@1.png 2x"
                             src="./images/5-gallery/gal3@1.png">
                     </picture>
@@ -37,13 +37,13 @@
                 <li class="inside-item">
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal4@1.webp 1x,./images/5-gallery/gal4@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 4" width="280px" height="280px"
+                        <img class="masonr-photo photo-big" alt="Картинка 4" 
                         srcset="./images/5-gallery/gal4@1.png 1x,./images/5-gallery/gal4@1.png 2x"
                             src="./images/5-gallery/gal4@1.png">
                     </picture>
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal5@1.webp 1x,./images/5-gallery/gal5@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 5" width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 5" 
                         srcset="./images/5-gallery/gal5@1.png 1x,./images/5-gallery/gal5@1.png 2x"
                             src="./images/5-gallery/gal5@1.png">
                     </picture>
@@ -55,13 +55,13 @@
                 <li class="inside-item">
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal6@1.webp 1x,./images/5-gallery/gal6@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 6" width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 6" 
                         srcset="./images/5-gallery/gal6@1.png 1x,./images/5-gallery/gal6@1.png 2x"
                             src="./images/5-gallery/gal6@1.png">
                     </picture>
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal7@1.webp 1x,./images/5-gallery/gal7@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 7" width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 7" 
                         srcset="./images/5-gallery/gal7@1.png 1x,./images/5-gallery/gal7@1.png 2x"
                             src="./images/5-gallery/gal7@1.png">
                     </picture>
@@ -73,13 +73,13 @@
                 <li class="inside-item">
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal8@1.webp 1x,./images/5-gallery/gal8@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 8" width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 8" 
                         srcset="./images/5-gallery/gal8@1.png 1x,./images/5-gallery/gal8@1.png 2x"
                             src="./images/5-gallery/gal8@1.png">
                     </picture>
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal9@1.webp 1x,./images/5-gallery/gal9@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 9" width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 9" 
                         srcset="./images/5-gallery/gal9@1.png 1x,./images/5-gallery/gal9@1.png 2x"
                             src="./images/5-gallery/gal9@1.png">
                     </picture>
@@ -91,7 +91,7 @@
                 <li class="inside-item">
                     <picture>
                         <source type="image/webp" srcset="./images/5-gallery/gal10@1.webp 1x,./images/5-gallery/gal10@2.webp 2x">
-                        <img class="masonr-photo" alt="Картинка 10" width="136px" height="136px"
+                        <img class="masonr-photo" alt="Картинка 10" 
                         srcset="./images/5-gallery/gal10@1.png 1x,./images/5-gallery/gal10@1.png 2x"
                             src="./images/5-gallery/gal10@1.png">
                     </picture>
