--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,6 +7,8 @@
   --accent-primary-color: #d41443;
   --accent-hover-color: #c7133e;
 
+  --bgc-mobile-menu: #E17992;
+
   --accent-secondary-color: #ffb8ca;
 
   --text-label-color: #ffa5ba;
