--- a/src/partials/mobile.html
+++ b/src/partials/mobile.html
@@ -8,7 +8,7 @@
         </button>
         </div>     
 
-    <button class="mobile-menu-button" type="button">
+    <button class="mobile-menu-button" type="button" data-modal-open3>
         Buy now
         <svg class="mobile-menu-vector-icon">
             <use href="./images/icons/symbol-defs.svg#icon-left-arrow-svg-2"></use>
