--- a/src/partials/modal1.html
+++ b/src/partials/modal1.html
@@ -12,25 +12,25 @@
                     <div class="info-input">
                         <input type="text" name="name" id="name" required>
                         <svg class="modal-icon">
-                            <use ></use>
+                            <use href="./images/icons/symbol-defs.svg#icon-person-black"></use>
                         </svg>
                     </div>
                 </div>
                 <div>
-                    <label class="form-label" for="tel">Quantity (1 piece) </label>
+                    <label class="form-label" for="tel">Quantity (1 piece)</label>
                     <div class="info-input">
                         <input type="tel" name="tel" id="tel" required>
-                        <svg class="modal-icon" >
-                            <use ></use>
+                        <svg class="modal-icon">
+                        <use href="./images/icons/symbol-defs.svg#icon-phone-black"></use>
                         </svg>
                     </div>
                 </div>
                 <div>
-                    <label class="form-label" for="mail">Phone</label>
+                    <label class="form-label" for="mail">E-mail</label>
                     <div class="info-input">
                         <input type="email" name="mail" id="mail" required>
-                        <svg class="modal-icon" >
-                            <use ></use>
+                        <svg class="modal-icon">
+                            <use href="./images/icons/symbol-defs.svg#icon-email-black"></use>
                         </svg>
                     </div>
                 </div>
@@ -40,7 +40,6 @@
                 </div>
             </form>
             <button type="submit" class="modal-submit" form="my-form">Order Now</button>
-            <script src="./js/modal.js"></script>
         </div>
     </div>
 </div>
