--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,17 +12,14 @@
 
 // Стили для файла с примером HTML-фрагмента
 
-
-@import './components/header';
-@import './components/mobile-menu';
-@import './components/hero';
-@import './components/products';
-@import './components/about';
-@import './components/advantages';
-
-@import './components/reviews';
-
-@import './components/contacts';
-@import "./components/footer";
+@import './layout/header';
+@import './layout/mobile-menu';
+@import './layout/hero';
+@import './layout/products';
+@import './layout/about';
+@import './layout/advantages';
+@import './layout/reviews';
+@import './layout/contacts';
+@import './layout/footer';
 
 
