--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -6,7 +6,6 @@
   }
 
   &__text{
-    outline: black 1px solid;
     max-width:234px;
     margin-bottom:43px;
   } 
@@ -29,13 +28,7 @@
    color:var(--color-design-main);
   }
 
-  /*&__contakt{
-    display:flex;
-    justify-content:flex-end;
-  }*/
-
-  &__social{
-    outline: black 1px solid;
+   &__social{
     display: flex;
     justify-content:flex-end;
     margin-bottom:46px;
@@ -76,13 +69,16 @@
   }
 
   &__contakt-tel{
-    outline: black 1px solid;
     display: flex;
     justify-content:flex-end;
     font-weight: 700;
     font-size: 12px;
     line-height: 1.833;
     color: var(--color-design-black);
+  }
+
+  &__contakt-link{
+    color:var(--color-design-main);
   }
 
   &__copyright{
