добавила слайдер, стилизовала прокрутку

--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -32,16 +32,19 @@
     background-repeat: no-repeat;
     background-position: 61px 28px;
     padding: 43px 50px 20px 50px;
+    margin-bottom: 30px;
 
     @media screen and (min-width: $tablet) {
       padding: 47px 80px 34px 80px;
       width: 620px;
       margin: 0 auto;
+            margin-bottom: 24px;
     }
 
     @media screen and (min-width: $desktop) {
       padding: 47px 89px 39px 87px;
       width: 926px;
+      margin-bottom: 15px;
     }
   }
 
@@ -52,7 +55,7 @@
     font-size: 12px;
     line-height: 2.583;
     text-align: center;
-    margin-bottom: 30px;
+    
     background-image: repeating-linear-gradient(
       to top,
       #e1e1e1 0px 1px,
@@ -63,13 +66,13 @@
       font-size: 14px;
       line-height: 2.143;
       letter-spacing: 0.04em;
-      margin-bottom: 24px;
+
     }
 
     @media screen and (min-width: $desktop) {
       font-size: 16px;
       line-height: 1.875;
-      margin-bottom: 15px;
+      
     }
   }
 
@@ -128,3 +131,69 @@
     }
   }
 }
+
+.slick-track {
+  display: flex;
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slider {
+  position: relative;
+}
+
+.slick-arrow {
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+  font-size: 0;
+  width: 48px;
+  height: 48px;
+}
+
+.slick-prev {
+  left: 0;
+  background: url(././../images/svg/icon-left.svg) 0 0 / 100% no-repeat;
+
+}
+
+.slick-next {
+  right: 0;
+  background: url(././../images/svg/icon-right.svg) 0 0 / 100% no-repeat;
+}
+
+.slick-dots {
+  display: flex;
+  justify-content: center;
+
+}
+
+.slick-dots {
+  &:not(:first-child) button{
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  background-color: #d9d9d9;}
+}
+
+
+.slick-dots li {
+  &:not(:last-child) {
+  margin-right: 18px;
+}
+&:first-child button {
+   background-image: url(././../images/svg/home.svg);
+  background-color: transparent;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+}
+
+}
+
+// &.slick-active button
+
+
