готовая секция продукты

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -20,7 +20,7 @@
                         <div class="products-content cream">
                             <h3 class="products-content-title">ice cream</h3>
                             <p class="products-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-                            <div class="products-icon">
+                            <div id="openModal" class="products-icon">
                                 <button type="button" class="button-products">
                                     <svg class="products-arrow" width="11px" height="10px">
                                         <use href="./images/sprite.svg#icon-arrow"></use>
@@ -61,15 +61,18 @@
             </div>
 
             <!-- подробное описание продукта -->
-            <!-- <div class="product-item">
-                <img src="https://loremflickr.com/320/240?random=1">
-                <div class="product-list">
-                    <h3></h3>
-                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate magni veritatis nobis excepturi tenetur, ratione laudantium perferendis rerum dolorum enim quaerat accusamus neque ipsam repudiandae consequuntur dicta magnam quo in.</p>
-                    <span class="price">$ 32</span>
-                    <a href="" class="button">cart</a>
+            <!-- <div  class="product-item is-hidden" data-modal>
+                <div class="product-open" >
+                    <img src="https://picsum.photos/500/550">
+                    <div class="product-list">
+                        <h3>Blueberry 🍨</h3>
+                        <p class="product-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate magni veritatis nobis excepturi tenetur, ratione laudantium perferendis rerum dolorum enim quaerat accusamus neque ipsam repudiandae consequuntur dicta magnam quo in.</p>
+                        <span class="price">$ 32</span>
+                        <a href="" class="product-button" data-modal-close>cart</a>
+                    </div>
                 </div>
-              </div> -->
+            </div> -->
+
         </section>
     </main>
 
