добавляет стилизацию слайдера для десктопа

--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -7,7 +7,6 @@
 
   padding-left: 50px;
   padding-right: 50px;
-  padding-bottom: 86px;
 
   text-align: center;
 }
@@ -21,14 +20,12 @@
   border-radius: 50%;
   overflow: hidden;
 }
-
 .slider-text-wrapper {
   position: relative;
   margin: 0 auto;
   margin-bottom: 30px;
   padding: 26px 26px;
-  max-width: 280px;
-  max-height: 308px;
+
   z-index: -2;
 
   background: var(--customer-reviews-bgc);
@@ -38,7 +35,8 @@
     display: block;
     position: absolute;
     z-index: -1;
-    top: 10px;
+    top: 3%;
+    left: 10%;
 
     width: 54px;
     height: 40px;
@@ -48,8 +46,16 @@
 }
 
 .review-text {
-  font-size: 11px;
+  font-size: 12px;
   line-height: 2.583;
+
+  background-image: repeating-linear-gradient(
+    to bottom,
+    transparent,
+    transparent 29px,
+    #e1e1e1 29px,
+    #e1e1e1 30px
+  );
 }
 .customer-name-wrapper {
   position: relative;
@@ -95,6 +101,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .slider-item {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
   .pic-thumb {
     margin-bottom: 19px;
   }
@@ -102,12 +113,10 @@
   .slider-text-wrapper {
     margin-bottom: 24px;
     padding: 47px 80px 34px;
-    min-width: 620px;
-    min-height: 164px;
 
     &::before {
       top: 15%;
-      left: 7%;
+      left: 9%;
 
       width: 54px;
       height: 40px;
@@ -129,5 +138,31 @@
   .customer-name {
     font-size: 16px;
     line-height: 1.875;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .slider-text-wrapper {
+    margin-bottom: 15px;
+    padding: 47px 88px 39px;
+
+    &::before {
+      top: 24%;
+      left: 5%;
+
+      width: 54px;
+      height: 40px;
+      background-image: url(../../images/customer-reviews/quotes.svg);
+      background-repeat: no-repeat;
+    }
+    .review-text {
+      font-size: 16px;
+      line-height: 1.875;
+    }
+
+    .customer-name {
+      font-size: 20px;
+      line-height: 1.85;
+    }
   }
 }
