--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -20,17 +20,17 @@
     pointer-events: none;
 }
 
-.backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0.9);
-}
 
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-
+    width: 95%;
+    height: 95%;
     max-width: 450px;
     max-height: 609px;
+    padding: 40px;
+    overflow: scroll;
 
     background-color: $modal-background-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
