--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -4,16 +4,21 @@
 
 .page-footer-top{
   padding-bottom: 43px;
-
+ 
   .label,
   .title {
     text-align: left;
   }
 
   .label {
-    margin-bottom: 43px;
+    margin-bottom: 16px;
   }
   
+}
+
+.wrapper-label-title{
+  width: 234px;
+  margin-bottom: 43px;
 }
 
 .page-footer-bottom{
@@ -71,8 +76,6 @@
 }
 
 .contact-tel {
-  display: block;
-
   font-weight: 700;
   font-size: 12px;
   line-height: 1.833;
@@ -86,6 +89,7 @@
 }
 
 .footer-copyright {
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.5;
@@ -100,13 +104,20 @@
   .page-footer-top{
     & > .container  {
       display: flex;
-      justify-content: space-between;
-    }
-
-    .label {
-      margin-bottom: 0;
-    }
+      justify-content: space-between;     
+    }  
   }
+
+  .page-footer-bottom{
+    & > .container  {
+      display: flex;
+      justify-content: center;      
+    }  
+  }
+
+ .wrapper-label-title{
+  margin-bottom: 0; 
+ }
 
   .social-media__link{
     width: 34px;
@@ -124,10 +135,10 @@
   }
   
   .footer-copyright{
+    margin-left: 4px;
     line-height: 1.857;
     letter-spacing: 0.02em;
   }
-
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
@@ -145,6 +156,10 @@
     letter-spacing: 0.06em;   
     }
     
+  }
+
+  .wrapper-label-title{
+    flex-basis: 340px;
   }
   
   .page-footer-bottom{
@@ -174,7 +189,6 @@
     .label {
     font-size: 30px;
     line-height: 1.154;
-
     }
 
     .title {
@@ -189,6 +203,10 @@
     padding-bottom: 10px;
   }
   
+  .wrapper-label-title{
+  flex-basis: calc(100%/2);
+  }
+
   .social-media__item {
 
     &:not(:last-child) {
@@ -207,7 +225,7 @@
 
   .footer-copyright {
     line-height: 1.75;
-    text-align: center;  
+   
   }
 }
  
