--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -38,7 +38,7 @@
       padding: 47px 80px 34px 80px;
       width: 620px;
       margin: 0 auto;
-            margin-bottom: 24px;
+      margin-bottom: 24px;
     }
 
     @media screen and (min-width: $desktop) {
@@ -55,7 +55,7 @@
     font-size: 12px;
     line-height: 2.583;
     text-align: center;
-    
+
     background-image: repeating-linear-gradient(
       to top,
       #e1e1e1 0px 1px,
@@ -66,13 +66,11 @@
       font-size: 14px;
       line-height: 2.143;
       letter-spacing: 0.04em;
-
     }
 
     @media screen and (min-width: $desktop) {
       font-size: 16px;
       line-height: 1.875;
-      
     }
   }
 
@@ -156,7 +154,6 @@
 .slick-prev {
   left: 0;
   background: url(././../images/svg/icon-left.svg) 0 0 / 100% no-repeat;
-
 }
 
 .slick-next {
@@ -166,34 +163,29 @@
 
 .slick-dots {
   display: flex;
+  align-items: center;
   justify-content: center;
-
 }
 
 .slick-dots {
-  &:not(:first-child) button{
-  font-size: 0;
-  width: 12px;
-  height: 12px;
-  background-color: #d9d9d9;}
+  & button {
+    font-size: 0;
+    width: 12px;
+    height: 12px;
+    background-color: #d9d9d9;
+  }
+
+  li {
+    &:not(:last-child) {
+      margin-right: 18px;
+    }
+
+    &.slick-active button {
+      background-image: url(././../images/svg/home.svg);
+      background-color: transparent;
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+  }
 }
-
-
-.slick-dots li {
-  &:not(:last-child) {
-  margin-right: 18px;
-}
-&:first-child button {
-   background-image: url(././../images/svg/home.svg);
-  background-color: transparent;
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-
-}
-
-}
-
-// &.slick-active button
-
-
