убирает фон из контактов

--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,6 +1,6 @@
-.container {
-  background-color: #fff5f6;
-}
+// .container {
+//   background-color: #fff5f6;
+// }
 
 .contacts-cards {
   flex-wrap: wrap;
