more or less it looks good

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -89,7 +89,8 @@ min-width: 324px;
 height: auto;
 display: inline-flex;
 background-repeat: no-repeat;
-
+position: absolute;
+top: 32px;
 justify-content:center;
 
 
@@ -111,10 +112,11 @@ color: var(--primary-light-color);
 .milk-decanter-wrapper{display: inline-flex;
 align-items: center;
 margin-top:19px;
+
 }
 .hero-left-side{display: inline-flex;
 flex-direction: column;
-transform: translateY(-100%);}
+}
    
 
 .hero-title{
@@ -137,6 +139,7 @@ line-height: 90.5%;
 display:inline-block;
 position: absolute;
 right: 34px;
+top: 50%;
 
 
 }
