--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -224,6 +224,8 @@
         // padding-top: 119px;
         padding-bottom: 158px;
         background: linear-gradient(to bottom,$bg-main 8%, $bg-light-pink 8% 91% );
+    }
+}
 
 @media screen and (min-width: 1200px) {
     .contacts {
@@ -316,5 +318,4 @@
         }
     }
 }
-
-
+}
