fixed scroll for mobile, formatted by prettier 5.9.2

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,11 +1,14 @@
 .hero {
   background-color: var(--bg-header-hero);
 
-  
-
   .container {
     position: relative;
-  
+
+    @media screen and (max-width: 767px) {
+      padding-top: 9px;
+      overflow-x: hidden;
+    }
+
     @media screen and (min-width: 768px) {
       display: flex;
     }
@@ -56,7 +59,6 @@
     max-width: 170px;
     margin-bottom: 20px;
 
-
     font-size: 22px;
     line-height: 1.136;
   }
@@ -64,7 +66,7 @@
   @media screen and (min-width: 1280px) {
     max-width: 280px;
     margin-bottom: 25px;
-    
+
     font-size: 38px;
     line-height: 1.158;
   }
@@ -144,10 +146,9 @@
 
 .hero__bottle-img {
   @media screen and (min-width: 1280px) {
-  position: relative;
-  left: -39px;
+    position: relative;
+    left: -39px;
   }
-  
 }
 
 .hero__desc {
@@ -159,8 +160,8 @@
   line-height: 150%;
   color: var(--color-design-white);
 
-  @media screen and (min-width: 1280px){
-  min-width: 200px;
+  @media screen and (min-width: 1280px) {
+    min-width: 200px;
 
     font-size: 14px;
     line-height: 140%;
@@ -192,7 +193,7 @@
 .header__circle-icon {
   fill: var(--color-design-main);
 
-  transition:  fill 250ms linear;
+  transition: fill 250ms linear;
 
   .hero__circle-link:hover &,
   .hero__circle-link:focus & {
@@ -203,6 +204,7 @@
 .hero__box-second {
   position: relative;
   z-index: 1;
+
   @media screen and (max-width: 767px) {
     left: 37%;
   }
@@ -238,10 +240,10 @@
     }
 
     @media screen and (min-width: 1280px) {
-    top: -56px;
-    left: -119px;
-    width: 538px;
-    height: 538px;
+      top: -56px;
+      left: -119px;
+      width: 538px;
+      height: 538px;
     }
   }
 }
@@ -314,9 +316,9 @@
     background-color: var(--bg-btn-light);
 
     @media screen and (min-width: 1280px) {
-    width: 30px;
-    height: 30px;
-  }
+      width: 30px;
+      height: 30px;
+    }
   }
 }
 
