social link add

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,21 +9,21 @@
             <div class="social-container-footer">
                 <ul class="social-lists-footer">
                     <li class="social-list-footer list">
-                        <a href="" class="social-link-footer link">
+                        <a href="https://github.com/" class="social-link-footer link">
                             <svg class="social-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#github"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-footer list">
-                        <a href="" class="social-link-footer link">
+                        <a href="https://web.telegram.org/" class="social-link-footer link">
                             <svg class="social-icon" width="22" height="17">
                                 <use href="./images/sprite.svg#telegram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-footer list">
-                        <a href="" class="social-link-footer link">
+                        <a href="https://m.facebook.com/" class="social-link-footer link">
                             <svg class="social-icon" width="10" height="20">
                                 <use href="./images/sprite.svg#facebook"></use>
                             </svg>
