--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -382,7 +382,7 @@
   height: 10px;
   margin-left: 10px;
 
-  background-image: url('../images/Vector.svg');
+  background-image: url('../images/icon/Vector.svg');
 
   background-size: contain;
 }
